# localai_backend

./: .coverage  .flaskenv  .gitignore  .gitmodules  .pylintrc  .releaserc.json  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  alembic.ini  config.py  coverage.xml  logging_config.yaml  main.py  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  sonar-project.properties  ty.toml
.claude/agents/: task-planner-opus.md
.claude/skills/plan-management/: SKILL.md
.claude/skills/testing-requirements/: SKILL.md
.claude/skills/type-safety-mastery/: SKILL.md
.github/workflows/: build.yml  release.yml
.husky/: pre-commit
.opencode/skills/code-organization/: SKILL.md
.opencode/skills/error-handling-patterns/: SKILL.md
.opencode/skills/refactoring-patterns/: SKILL.md
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 210795559cec_add_safety_check_enabled_to_config.py  2468ba64f2ee_added_is_nsfw_to_generated_images_table.py  8fff7131769e_renamed_ram_and_gpu_with_scale_factor.py  aeb6848de74b_added_file_name_to_generated_images.py  d7badfc4c206_add_loras_table.py  f475e8680ade_init_schema.py
app/: __init__.py
app/blueprints/: donwloads.py  downloads.py  drivers.py  hardware.py  models.py  users.py
app/blueprints/downloads/: routes.py  schemas.py  states.py  types.py
app/blueprints/hardware/: routes.py  schemas.py
app/blueprints/models/: __init__.py  routes.py  schemas.py
app/blueprints/users/: routes.py
app/blueprints/websocket/: __init__.py  routes.py  schemas.py
app/constants/: __init__.py  generation.py  img2img.py  max_memory.py  model_loader.py  platform.py  recommendations.py  samplers.py  schedulers.py  schemas.py  service.py  upscalers.py  users.py
app/constants/styles/: __init__.py  abstract.py  academia.py  action.py  adorable.py  ads.py  art.py  artstyle.py  astral.py  avant.py  baroque.py  bauhaus.py  blueprint.py  caricature.py  cel.py  character.py  cinematic.py  classicism.py  color.py  colored.py  conceptual.py  constructivism.py  cubism.py  dadaism.py  dark.py  dmt.py  doodle.py  double.py  dripping.py  expressionism.py  faded.py  fauvism.py  flat.py  fooocus.py  fortnite.py  futurism.py  futuristic.py  game.py  glitchcore.py  glo.py  (+45 more)
app/core/: download_tqdm.py  shared_data.py
app/cores/: gpu_utils.py  typing_utils.py
app/cores/constants/: batch_size.py  error_messages.py  memory_thresholds.py  model_loader.py  recommendations.py  service.py
app/cores/generation/: __init__.py  hires_fix.py  image_processor.py  image_utils.py  latent_decoder.py  memory_manager.py  phase_tracker.py  progress_callback.py  realesrgan_upscaler.py  safety_checker_service.py  seed_manager.py  traditional_upscaler.py  upscaler.py
app/cores/max_memory/: __init__.py  max_memory.py
app/cores/model_loader/: __init__.py  cancellation.py  model_loader.py  progress.py  schemas.py  setup.py  steps.py  strategies.py
app/cores/model_manager/: __init__.py  loader_service.py  model_manager.py  pipeline_manager.py  resource_manager.py  state_manager.py
app/cores/pipeline_converter/: __init__.py  pipeline_converter.py
app/cores/platform_optimizations/: __init__.py  (+5 more)
app/database/: __init__.py  base.py  config_crud.py  constant.py  crud.py  database.py  model.py  service.py  user.py
app/features/: __init__.py
app/model_downloader/: __init__.py  model_download_service.py  states.py
app/model_loader/: __init__.py  constants.py  max_memory.py  model_loader.py  schemas.py
app/model_manager/: __init__.py  constants.py  loader.py  model_download_service.py  model_loader.py  model_loader_service.py  model_manager.py  model_manager_service.py  schemas.py
app/predefined_styles/: __init__.py  fooocus.py  sai.py  schemas.py
app/routers/: __init__.py
app/schemas/: config.py  core.py  downloads.py  drivers.py  generators.py  hardware.py  hires_fix.py  img2img.py  lora.py  loras.py  model_info.py  model_loader.py  models.py  recommendations.py  responses.py  socket.py  styles.py  upscaler.py
app/services/: __init__.py  database.py  device.py  image.py  logger.py  memory.py  model_manager.py  models.py  patch_service.py  platform.py  recommendations.py  socket_io.py  storage.py  styles.py
app/socket/: __init__.py  schemas.py  service.py
app/styles/: __init__.py  abstract.py  academia.py  action.py  adorable.py  ads.py  art.py  artstyle.py  astral.py  avant.py  baroque.py  bauhaus.py  blueprint.py  caricature.py  cel.py  character.py  cinematic.py  classicism.py  color.py  colored.py  conceptual.py  constructivism.py  cubism.py  dadaism.py  dark.py  dmt.py  doodle.py  double.py  dripping.py  expressionism.py  faded.py  fauvism.py  flat.py  fooocus.py  fortnite.py  futurism.py  futuristic.py  game.py  glitchcore.py  glo.py  (+45 more)
docs/: 001-model-manager-refactor.md  002-fix-macos-cuda-dependencies.md  002-model-load-progress-bar.md  003-model-load-progress-bar.md  004-improve-logging-service.md  ARCHITECTURE.md  BEST_PRACTICES.md  CODING_STYLE.md  COMMUNICATION_GUIDELINES.md  DEVELOPMENT_COMMANDS.md  ERROR_HANDLING.md  LOGGING.md  PLAN_MODE.md  TESTING.md
exogen_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
localai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
openspec/: project.md
plans/: 005-fix-download-size-bloat.md  006-add-lora-support.md  007-model-loader-modularization.md  008-handle-missing-model-index.md  009-config-api-endpoint.md
specs/001-model-manager-refactor/: spec.md
specs/003-model-load-progress-bar/: spec.md
specs/004-improve-logging-service/: plan.md
specs/006-add-lora-support/: plan.md  spec.md
specs/007-model-loader-modularization/: plan.md
specs/009-config-api-endpoint/: plan.md
static/: style_gallery.html
tests/: conftest.py  test_main.py
typings/basicsr/: __init__.pyi
typings/diffusers/: __init__.pyi
typings/gfpgan/: __init__.pyi
typings/pypdl/: __init__.pyi
typings/realesrgan/: __init__.pyi
typings/socketio/: __init__.pyi
typings/transformers/: __init__.pyi  tokenization_utils_base.pyi
(+330 files in other folders)
