[project]
name = "localai_backend"
version = "0.1.0"
description = "Backend for LocalAI project"
authors = [
  { name = "Andy D. Nguyen" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "aiohttp==3.12.14",
  "attr==0.3.2",
  "brotli==1.1.0",
  "brotlicffi==1.1.0.0",
  "chardet==5.2.0",
  "ConfigParser==7.2.0",
  "cryptography==45.0.5",
  "diffusers==0.34.0",
  "docutils==0.21.2",
  "filelock==3.18.0",
  "h2==4.2.0",
  "HTMLParser==0.0.2",
  "huggingface_hub==0.33.4",
  "ipython==9.4.0",
  "ipywidgets==8.1.7",
  "pyjnius",
  "js==1.0",
  "keyring==25.6.0",
  "Pillow==11.3.0",
  "pydantic==2.11.7",
  "pyOpenSSL==25.1.0",
  "python-socketio==5.13.0",
  "redis==6.2.0",
  "simplejson==3.20.1",
  "Sphinx==8.2.3",
  "SQLAlchemy==2.0.41",
  "tenacity==9.1.2",
  "thread==2.0.5",
  "torch==2.7.1",
  "transformers==4.53.2",
  "urllib3_secure_extra==0.1.0",
  "zstandard==0.23.0",
  "psutil==7.0.0",
  "accelerate==1.9.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
  "tests"
]